fix topbar of home page style on small devices

--- a/src/Components/Searchbar/Searchbar.module.scss
+++ b/src/Components/Searchbar/Searchbar.module.scss
@@ -33,5 +33,17 @@
   @media screen and (max-width: 750px) {
     max-width: 100%;
     margin-right: 0;
+    height: 95px;
+    border-radius: 10px;
+    input {
+      font-size: 24px;
+      &::placeholder {
+        font-size: 24px;
+      }
+    }
+    button {
+      font-size: 32px;
+      padding: 0 50px 0 60px;
+    }
   }
 }
