--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -8,9 +8,9 @@ $columnWidth: calc(
 );
 
 .Home {
-  // background-image: url("/design/desktop-design-home-light.jpg");
-  // background-repeat: no-repeat;
-  // background-position: center -80px;
+  background-image: url("/design/mobile-design-home-dark.jpg");
+  background-repeat: no-repeat;
+  background-position: center -160px;
   padding: 48px 0;
   .container {
     padding: 0 $web-side-space;
@@ -58,15 +58,18 @@ $columnWidth: calc(
   }
   @media screen and (max-width: 750px) {
     .container {
-      padding: 0 35px;
+      padding: 0 33px;
+      height: 500px;
       .row {
         flex-direction: column;
         .filterSelect {
-          margin-top: 70px;
+          margin-top: 82px;
+          width: 400px;
+        border-radius: 10px;
         }
       }
       .cardsContainer {
-        padding: 0 45px;
+        padding: 0 47px;
         display: flex;
         flex-direction: column;
       }
